--- a/index.html
+++ b/index.html
@@ -198,6 +198,10 @@
     <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-storage-compat.js"></script>
+
+    <!-- Cargar configuración y aplicación -->
+    <script src="config.js"></script>
+    <script src="app.js"></script>
     
     <script>
         // Variables globales
