--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             padding: 30px;
             text-align: center;
             margin-bottom: 30px;
-            color: white;
+            color: white:
         }
         
         .header h1 {
