--- a/index.html
+++ b/index.html
@@ -435,15 +435,15 @@ Fecha: {{fecha_generacion}}</textarea>
         import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
 
         // ===== CONFIGURACIÓN FIREBASE =====
-        const firebaseConfig = {
-            // 🔥 CONFIGURACIÓN REAL - Reemplazar con tu proyecto Firebase
-            apiKey: "AIzaSyDemo_Replace_With_Real_Key",
-            authDomain: "audit-system-real.firebaseapp.com",
-            projectId: "audit-system-real",
-            storageBucket: "audit-system-real.appspot.com",
-            messagingSenderId: "123456789012",
-            appId: "1:123456789012:web:abcdef123456"
-        };
+       const firebaseConfig = {
+  apiKey: "AIzaSyD2lCwOZAFFrFN8pXf-OCye204D7awyl_Q",
+  authDomain: "modulodatoswordautomatico.firebaseapp.com",
+  projectId: "modulodatoswordautomatico",
+  storageBucket: "modulodatoswordautomatico.firebasestorage.app",
+  messagingSenderId: "744851515219",
+  appId: "1:744851515219:web:5ece87673cc094f116a3a6",
+  measurementId: "G-RZWN8C7KVM"
+};
 
         // ===== SISTEMA PRINCIPAL =====
         class AuditSystemPro {
