--- a/index.html
+++ b/index.html
@@ -435,7 +435,8 @@ Fecha: {{fecha_generacion}}</textarea>
         import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
 
         // ===== CONFIGURACIÓN FIREBASE =====
-       const firebaseConfig = {
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
   apiKey: "AIzaSyD2lCwOZAFFrFN8pXf-OCye204D7awyl_Q",
   authDomain: "modulodatoswordautomatico.firebaseapp.com",
   projectId: "modulodatoswordautomatico",
